// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MacroProduct Macro Product Default 1`] = `
<div
  className="sc-jSFkmK eNiFKJ"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-eCApGN svCya"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t380f995c-0fdd-497f-8c13-a79b98eae814 place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t380f995c-0fdd-497f-8c13-a79b98eae814 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t380f995c-0fdd-497f-8c13-a79b98eae814.place-top {
        margin-top: -10px;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-top::before {
        border-top: 8px solid transparent;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-bottom {
        margin-top: 10px;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-left {
        margin-left: -10px;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-left::before {
        border-left: 8px solid transparent;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-right {
        margin-left: 10px;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-right::before {
        border-right: 8px solid transparent;
    }
    .t380f995c-0fdd-497f-8c13-a79b98eae814.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t49358f0a-3c1b-49aa-a77d-717dfd4ff306 place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t49358f0a-3c1b-49aa-a77d-717dfd4ff306 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-top {
        margin-top: -10px;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-top::before {
        border-top: 8px solid transparent;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-bottom {
        margin-top: 10px;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-left {
        margin-left: -10px;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-left::before {
        border-left: 8px solid transparent;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-right {
        margin-left: 10px;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-right::before {
        border-right: 8px solid transparent;
    }
    .t49358f0a-3c1b-49aa-a77d-717dfd4ff306.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src="https://www.rimagroup.com/wp-content/uploads/2019/06/Rail-Brake-TM.png"
  />
</div>
`;

exports[`Storyshots MacroProduct Macro Product No Thumb 1`] = `
<div
  className="sc-jSFkmK eNiFKJ"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-eCApGN svCya"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t3b125ba8-3d4b-4613-9319-771daf2230aa place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t3b125ba8-3d4b-4613-9319-771daf2230aa {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t3b125ba8-3d4b-4613-9319-771daf2230aa.place-top {
        margin-top: -10px;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-top::before {
        border-top: 8px solid transparent;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-bottom {
        margin-top: 10px;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-left {
        margin-left: -10px;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-left::before {
        border-left: 8px solid transparent;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-right {
        margin-left: 10px;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-right::before {
        border-right: 8px solid transparent;
    }
    .t3b125ba8-3d4b-4613-9319-771daf2230aa.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip tc006ed50-4726-49f7-89da-a4f974a47a97 place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.tc006ed50-4726-49f7-89da-a4f974a47a97 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tc006ed50-4726-49f7-89da-a4f974a47a97.place-top {
        margin-top: -10px;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-top::before {
        border-top: 8px solid transparent;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-bottom {
        margin-top: 10px;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-left {
        margin-left: -10px;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-left::before {
        border-left: 8px solid transparent;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-right {
        margin-left: 10px;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-right::before {
        border-right: 8px solid transparent;
    }
    .tc006ed50-4726-49f7-89da-a4f974a47a97.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src=""
  />
</div>
`;
